--- a/src/main/resources/com/sjmulhern/dndTracker/views/CreatureEditorView.fxml
+++ b/src/main/resources/com/sjmulhern/dndTracker/views/CreatureEditorView.fxml
@@ -231,7 +231,7 @@
       <Button fx:id="saveCreatureButton" layoutX="490.0" layoutY="709.0" mnemonicParsing="false" onAction="#saveCreatureButtonPressed" text="Save Creature" />
       <ComboBox fx:id="creatureNames" layoutX="123.0" layoutY="709.0" prefHeight="27.0" prefWidth="300.0" />
       <Button fx:id="openButton" layoutX="432.0" layoutY="709.0" mnemonicParsing="false" onAction="#openButtonPressed" text="Open" />
-        <GridPane layoutX="14.0" layoutY="616.0" prefHeight="120.0" prefWidth="81.0">
+        <GridPane layoutX="14.0" layoutY="669.0" prefHeight="67.0" prefWidth="81.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             </columnConstraints>
@@ -239,16 +239,13 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
-            <RadioButton fx:id="creatureRadioButton" mnemonicParsing="false" selected="true" text="Creature">
-                <toggleGroup>
+            <RadioButton fx:id="monsterRadioButton" mnemonicParsing="false" selected="true" text="Monster">
+            <toggleGroup>
                     <ToggleGroup fx:id="types" />
-                </toggleGroup>
-            </RadioButton>
-            <RadioButton fx:id="monsterRadioButton" mnemonicParsing="false" text="Monster" toggleGroup="$types" GridPane.rowIndex="1" />
-            <RadioButton fx:id="playerRadioButton" mnemonicParsing="false" text="Player" toggleGroup="$types" GridPane.rowIndex="2" />
-            <RadioButton fx:id="npcRadioButton" mnemonicParsing="false" text="NPC" toggleGroup="$types" GridPane.rowIndex="3" />
+            </toggleGroup></RadioButton>
+            <RadioButton fx:id="playerRadioButton" mnemonicParsing="false" text="Player" toggleGroup="$types" GridPane.rowIndex="1" />
+            <RadioButton fx:id="npcRadioButton" mnemonicParsing="false" text="NPC" toggleGroup="$types" GridPane.rowIndex="2" />
         </GridPane>
         <GridPane alignment="CENTER" layoutX="122.0" layoutY="375.0" prefHeight="67.0" prefWidth="488.0">
             <columnConstraints>
@@ -274,5 +271,20 @@
       <Label layoutX="532.0" layoutY="182.0" text="AC:" />
       <Spinner fx:id="acSpinner" layoutX="560.0" layoutY="177.0" prefHeight="27.0" prefWidth="51.0" stylesheets="@spinner.css" />
       <Button layoutX="16.0" layoutY="380.0" mnemonicParsing="false" onAction="#editSpellsSelected" text="Edit Spells" />
+      <GridPane layoutX="114.0" layoutY="451.0" prefHeight="27.0" prefWidth="536.0">
+         <columnConstraints>
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" />
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" />
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <Button fx:id="editWeaknessesButton" mnemonicParsing="false" onAction="#editWeaknessesPressed" text="Edit Weaknesses" />
+            <Button fx:id="editResistancesButton" mnemonicParsing="false" onAction="#editResistancesPressed" text="Edit Resistances" GridPane.columnIndex="1" />
+            <Button fx:id="editImmunitiesButton" mnemonicParsing="false" onAction="#editImmunitiesPressed" text="Edit Immunities" GridPane.columnIndex="2" />
+         </children>
+      </GridPane>
     </Pane>
 </AnchorPane>
