Got adding players and recalculating initiative to work correctly, closes #24

--- a/src/main/resources/com/sjmulhern/dndTracker/views/ToolbarView.fxml
+++ b/src/main/resources/com/sjmulhern/dndTracker/views/ToolbarView.fxml
@@ -11,6 +11,7 @@
         <Button mnemonicParsing="false" onAction="#mainMenuPressed" text="Main Menu" />
         <MenuButton fx:id="encounterPropertiesMenu" mnemonicParsing="false" text="Encounter Properties">
             <items>
+            <MenuItem mnemonicParsing="false" onAction="#recalculateInitiativePressed" text="Recalculate Initiative" />
                 <MenuItem mnemonicParsing="false" onAction="#initiativeControllerPressed" text="Initiative Controller" />
                 <MenuItem mnemonicParsing="false" onAction="#addNewCreaturePressed" text="Add New Creature" />
                 <MenuItem mnemonicParsing="false" onAction="#editCreaturePressed" text="Edit Current Creature" />
