--- a/src/main/resources/com/sjmulhern/dndTracker/views/ToolbarView.fxml
+++ b/src/main/resources/com/sjmulhern/dndTracker/views/ToolbarView.fxml
@@ -18,6 +18,7 @@
                 <MenuItem mnemonicParsing="false" onAction="#deleteCreaturePressed" text="Delete Current Creature" />
             </items>
         </MenuButton>
+      <Button mnemonicParsing="false" onAction="#editEncounterPressed" text="Edit Encounter" />
         <Button mnemonicParsing="false" onAction="#importButtonPressed" text="Import" />
         <Button mnemonicParsing="false" onAction="#exportButtonPressed" text="Export" />
       <Button fx:id="exitButton" mnemonicParsing="false" onAction="#exitPressed" text="Exit" />
