Fixed merge issues

--- a/src/main/resources/com/sjmulhern/dndTracker/views/RecalculateInitiativeView.fxml
+++ b/src/main/resources/com/sjmulhern/dndTracker/views/RecalculateInitiativeView.fxml
@@ -4,14 +4,14 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="360.0" prefWidth="340.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sjmulhern.dndTracker.sceneControllers.RecalculateInitiativeController">
+<AnchorPane prefHeight="360.0" prefWidth="340.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sjmulhern.dndTracker.sceneControllers.RecalculateInitiativeController">
    <children>
       <AnchorPane layoutX="10.0" layoutY="10.0">
          <children>
-            <TableView fx:id="playerTableView" prefHeight="235.0" prefWidth="319.0">
+            <TableView fx:id="playerTableView" editable="true" prefHeight="235.0" prefWidth="319.0">
               <columns>
                 <TableColumn fx:id="nameColumn" prefWidth="152.0" text="Name" />
                 <TableColumn fx:id="initRollColumn" prefWidth="166.0" text="Initiative Roll" />
@@ -23,5 +23,6 @@
             <Button layoutY="314.0" mnemonicParsing="false" onAction="#reRollPressed" prefHeight="27.0" prefWidth="319.0" text="Re-Roll" />
          </children>
       </AnchorPane>
+      <TitledPane animated="false" layoutX="10.0" layoutY="-220.0" text="untitled" />
    </children>
 </AnchorPane>
